syntax = "proto3";
package proto;
option go_package = "./;proto";
import "google/api/annotations.proto";

message UserRequest{
    string user_name = 1;
    string password = 2;
    string password_confirm = 3;
}

message UserDetailResponse {
    int32 code = 1;
    string msg = 2;
}

message GetEmoanaRequest {
    string value = 1;
}

message GetEmoanaResponse {
    string value = 1;
    string label = 2;
}

service EmoAnaService {
    rpc UserLogin(UserRequest) returns(UserDetailResponse){
        option (google.api.http)={
            post:"v1/user_login"
            body:"*"
        };
    }
    rpc UserRegister(UserRequest) returns(UserDetailResponse){
        option (google.api.http)={
            post:"v1/user_register"
            body:"*"
        };
    }
    rpc GetEmoana(GetEmoanaRequest) returns(GetEmoanaResponse){
        option (google.api.http)={
            post:"v1/emo_ana"
            body:"*"
        };
    }
}